--- a/Login_Page/style.css
+++ b/Login_Page/style.css
@@ -1,19 +1,18 @@
 
-* {
-    margin: 0;
-    padding: 0;
+ * {
+    margin:3px;
+    padding: 0px;
     box-sizing: border-box;
     font-family: "Segoe UI", Arial, sans-serif;
 }
 
 body {
-    background: #f4f6f9;
-    color: #333;
+    background: #ffffff;
 }
 
 
 .Nav {
-    background: rgb(24, 62, 189); 
+     background: linear-gradient(to right, #0088ff, #0280ff);
     padding: 15px 30px;
     display: flex;
     gap: 25px;
@@ -32,7 +31,10 @@ body {
 
 
 .Hero {
-    background: linear-gradient(to right, #0051ff, #003366);
+    background-image: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?ixlib=rb-4.0.3&auto=format&fit=crop&w=1470&q=80');
+    background-size: cover;
+    background-position: center;
+
     color: white;
     padding: 80px 20px;
     text-align: center;
@@ -52,6 +54,7 @@ body {
     padding: 30px;
     border-radius: 10px;
     box-shadow: 0 4px 15px rgba(0,0,0,0.08);
+    height:200px ;
 }
 
 p {
@@ -61,7 +64,7 @@ p {
 }
 
 .Footer {
-    background: #003f7f;
+     background: linear-gradient(to right, #0088ff, #0280ff);
     height: 80px;
     margin-top: 40px;
 }
