--- a/ideas_loyiso-1/style.css
+++ b/ideas_loyiso-1/style.css
@@ -5,6 +5,11 @@ body {
     color: #333;
 }
 
+.line
+{
+    border: 1px solid rgb(139, 138, 138);
+}
+
 .layout {
     display: flex;
 }
@@ -13,12 +18,15 @@ body {
     width: 230px;
     background: white;
     padding: 20px;
-    height: 100vh;
+    height: auto;   
     box-shadow: 3px 0 10px rgba(0,0,0,0.05);
+    transition: all 0.8s ease-in-out;
 }
 
-.logo {
-    margin-bottom: 30px;
+.logo img{
+    width: 220px;
+    padding: 40px 0;
+    transition: all 0.6s ease-in-out;
 }
 
 .sidebar nav a {
@@ -28,6 +36,7 @@ body {
     text-decoration: none;
     border-radius: 6px;
     margin-bottom: 5px;
+    transition: all 0.2s ease-in-out;
 }
 
 .sidebar nav a.active,
@@ -47,7 +56,7 @@ body {
     margin-bottom: 25px;
 }
 
-#search {
+.search {
     width: 250px;
     padding: 10px;
     border: 1px solid #ddd;
@@ -159,4 +168,34 @@ tr:hover {
 
 .submit-btn:hover {
     background: #1e4dcc;
+}
+
+#payrollTable
+{
+    text-align: center;
+}
+
+#state
+{
+    width: 50px;
+    padding: 10px;
+    background-color: wheat;
+    border: 1px solid #ddd;
+    border-radius: 6px; 
+    transition: all 0.5s ease-in-out;   
+}
+
+#state:hover
+{
+    background-color: rgb(114, 114, 114);
+}
+
+
+#icon {
+  display: inline-block;   /* allows rotation */
+  transition: all 0.8s ease-in-out;
+}
+
+.rotate {
+  transform: rotate(180deg);
 }
