--- a/ideas_loyiso-1/style.css
+++ b/ideas_loyiso-1/style.css
@@ -21,6 +21,13 @@ body {
     height: auto;   
     box-shadow: 3px 0 10px rgba(0,0,0,0.05);
     transition: all 0.8s ease-in-out;
+
+    nav a::before 
+    {
+    content: attr(data-icon);
+        margin-right: 10px;
+        font-size: 18px;
+    }
 }
 
 .logo img{
@@ -39,8 +46,7 @@ body {
     transition: all 0.2s ease-in-out;
 }
 
-.sidebar nav a.active,
-.sidebar nav a:hover {
+.sidebar nav a.active, .sidebar nav a:hover{
     background: #eef3ff;
     color: #2763ff;
 }
@@ -210,3 +216,4 @@ tr:hover {
     font-weight:600;
     display:inline-block;
 }
+
