--- a/Login_Page/style.css
+++ b/Login_Page/style.css
@@ -10,13 +10,12 @@ body {
   align-items: center;
 }
 
-/* Center box */
+/* login box */
 .login-container {
   width: 100%;
   max-width: 410px;
 }
 
-/* Glass effect box */
 .login-box {
   background: #ffffffdd;
   backdrop-filter: blur(8px);
@@ -33,7 +32,7 @@ body {
   to { opacity: 1; transform: translateY(0); }
 }
 
-/* Optional Logo Circle */
+/*Logo */
 .logo-circle {
   width: 70px;
   height: 70px;
@@ -135,7 +134,7 @@ h1 {
   background: #c2c9e6;
 }
 
-/* Small links */
+/* links */
 .links {
   margin-top: 15px;
   font-size: 14px;
